HW WK3 Qs half-way there

--- a/main.tex
+++ b/main.tex
@@ -867,17 +867,17 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
         \item For each of the statements below, indicate whether the statement is true or false:
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
             \item In the international PCT phase, the applicant can file a protest with the EPO and request that a full search is made. The protest is free of charge, but it has to be supported by arguments. --- \textbf{False} --- a protest fee has to be paid under [\textbf{Rule 40}].
-            \item The applicant can timely pay one additional fee for the third invention to be searched in the international PCT phase. In the European phase, the applicant can limit the application to the third invention.
+            \item The applicant can timely pay one additional fee for the third invention to be searched in the international PCT phase. In the European phase, the applicant can limit the application to the third invention. --- \textbf{True}
             \item The applicant can ignore the invitation. In the European phase, the applicant can file a divisional application directed to the third invention. --- \textbf{True}
-            \item The applicant can ignore the invitation. In the European phase, the applicant will again receive an invitation to pay additional search fees.
+            \item The applicant can ignore the invitation. In the European phase, the applicant will again receive an invitation to pay additional search fees. --- \textbf{True}
         \end{enumerate}
         
         \item (from L3-14)
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item What is the purpose of the requirement of "unity of invention"?
-            \item What is the time limit to pay the additional search fee in the international phase?
-            \item To whom must the additional search fee be paid?
-            \item When must the applicant pay a "protest fee"? What time limit applies?
+            \item The purpose of the requirement of "unity of invention" is to avoid people getting multiple inventions patented for the price of one search. Relevant provisions are: [\textbf{Art. 17.3}], [\textbf{Art. 34.3}], [\textbf{R. 13}], [\textbf{R. 40}],
+            \item What is the time limit to pay the additional search fee in the international phase? --- within 1 month from date of invitation [\textbf{R. 40.1(ii)}].
+            \item To whom must the additional search fee be paid? --- payable directly to the ISA [\textbf{Art. 40.2(b)}],
+            \item A "protest fee" may be paid if you don't agree with the assessment of lack of unity. Accompanied by a reasoned statement as to how the \textbf{application is unitary} or as to how the \textbf{additional fees are excessive}. The time limit for the protest fee is \underline{1 month from the date of the invitation} to pay additional search fees. 
         \end{enumerate}
     \end{enumerate}
 
