HW WK3 more questions

--- a/main.tex
+++ b/main.tex
@@ -914,21 +914,26 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
     \item % Question 6
     In which cases can the EPO act as IPEA? \\
     (multiple choice)
+    
     \begin{enumerate}[label=(\alph*)]
-        \item Spanish office was the ISA
-        \item Nordic Patent Institute was the ISA
-        \item USPTO was the ISA
-        \item EPO was the ISA
+        \item Spanish office was the ISA --- \textbf{True}
+        \item Nordic Patent Institute was the ISA --- \textbf{True}
+        \item USPTO was the ISA --- \textbf{False}
+        \item EPO was the ISA --- \textbf{True}
+        
+        \underline{\texttt{Annex E -- IPEA}:} \\
+        \texttt{
+The EPO acts as International Preliminary Examination Authority under the condition only if the international search is or has been performed by the EPO acting as International Searching Authority or another International Searching Authority located in and operating for any State party to the European Patent Convention has prepared the international search report (Annex A EPO-WIPO Agreement). These International Searching Authorities are the Austrian Patent Office, the Finnish Patent and Registration Office (PRH), the Nordic Patent Institute, the Spanish Patent and Trademark Office, the Swedish Intellectual Property Office (PRV), the Turkish Patent and Trademark Office (Turkpatent) or the Visegrad Patent Institute.}
     \end{enumerate}
 
     \item % Question 7
     What documents must an applicant file when filing Article 19 amendments? \\
     (single choice)
     \begin{enumerate}[label=(\alph*)]
-        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments
-        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments 
-        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
-        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments --- \textbf{False}
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments  --- \textbf{True}. [\textbf{Art. 19(1)}] specifies that the statement regarding impact, etc., is optional, while [\textbf{R. 46(5)}] makes it clear that the replacement sheets have to contain a complete set of claims and an accompanying letter shall identify the amended claims, the differences, any cancelled claims and indicate basis for amendments.
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings --- \textbf{False}
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings --- \textbf{False}
     \end{enumerate}
 
 \end{enumerate}
