--- a/main.tex
+++ b/main.tex
@@ -884,12 +884,12 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
     \item % Question 3
     L3-16 
     \begin{enumerate}[label=(\alph*)]
-        \item When must the international search report be established?
-        \item What are the contents of the international search report?
-        \item What can the applicant do after receiving the international search report, apart from filing a demand for international preliminary examination?
-        \item What time limits apply? Where must the applicant file the amendments?
-        \item In what form must the applicant file the amendments and any accompanying letter or statement? In which language?
-        \item When are amendments to the claims under PCT Article 19 not allowed?
+        \item The time limit for establishing the ISR [or the declaration under \textbf{Art. 17(2)(a)} that there won't be an ISR] is \textbf{3 months from the receipt of the search copy} by the ISA \textit{or} \textbf{9 months from priority date} -- whichever expires \textsc{later} [\textbf{R. 42}].
+        \item The contents of the international search report (under \textbf{Rule 43}) are: (i) identification of the ISA; (ii) date of ISR completion and relevant priority date; (iii) classification of subject-matter; (iv) citations of relevant documents (relevant by claim and with specific passages in the prior art); (v) classification of fields searched; (vi) remarks considering unity; (vii) name of officer.
+        \item After receiving the international search report, the Applicant may amend the claims (only the claims and only once) under \textbf{Art. 19}. There are no direct provisions for commenting/responding to the ISR otherwise, other than submitting comments to the IB on an informal basis. Any informal comments received after 30 months from the priority date will only be kept in the file of the International Bureau and not be transmitted to the designated Offices. [see also \textsc{AG--IP 7.030}].
+        \item The time limit for \textbf{Art. 19} amendments is \textbf{2 months from transmittal of ISR to the IB} or \textbf{16 months after priority date} -- whichever comes \textsc{later}. They must be sent directly to the IB.
+        \item The amendments and any accompanying letter or statement are to be filed in a form \textit{reasonably free from erasures and shall be free from alterations, overwritings, and interlineations} [\textbf{R. 11.12}]. The language of the amendments shall be the language of publication if the PCTa has been filed in a language other than the language in which it is published [\textbf{R. 46.3}]. The statement shall be in the language in which the PCTa is published and shall not exceed 500 words if in/or translated to English.    [\textbf{R. 46.4}]. Replacement sheets with a complete set of claims outlining amendments and a letter mentioning the amendments and indicating basis therefor shall be included [\textbf{R. 46.5}].
+        \item Amendments to the claims under PCT \textbf{Article 19} are not allowed when the ISA has declared under \textbf{Art. 17(2)(a)} that there will be no ISR [see also \textsc{AG--IP 9.004}]. Amendments are allowed to claims that were searched even if other claims were considered unsearchable.
     \end{enumerate}
 
     \item % Question 4
@@ -897,19 +897,21 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
     An applicant has filed an international application on 9 May 2023 as a first filing at the EPO as receiving Office, in English. The EPO acted as International Searching Authority and the international search report was transmitted to the applicant in December 2023; the written opinion (WO-ISA) suggests that the invention is patentable. \\
     The applicant being afraid that there is prior art which was not discovered by the EPO as ISA, considers filing a request for supplementary international search to be carried out by the Intellectual Property Office of Singapore.
     \begin{enumerate}[label=(\alph*)]
-        \item Until when can the applicant file a request for supplementary international search [PCT/IB/375]? Where should the request be filed? In which language should the request be filed?
-        \item What fees must be paid in respect of the request for supplementary international search? By when must the fees be paid? What is the amount of the fees?
-        \item When will the supplementary international search start?
-        \item By when must the supplementary international search report be established? Will a written opinion be issued together with the supplementary international search report?
-        \item Will the supplementary international search report cite any document which was already cited in the international search report established by the EPO?
-        \item Will the supplementary international search report be published? If so, in what form?
+        \item The applicant may file a request for supplementary international search [\textsc{PCT/IB/375}] until \textbf{22 months after the priority date} -- in this case; \textit{10 March 2025}. The request should be filed \textbf{directly with the IB} in \underline{English} or in \underline{French}. [\textbf{R. 45\textit{bis}}] and [\textsc{AG--IP 8.007}].
+        \item Fees to be paid include \textbf{(i)} the supplementary search fee for the benefit of the Authority specified for supplementary search (here the \textsc{SG} office); and \textbf{(ii)} the supplementary search handling fee for the benefit of the International Bureau.
+        They must \textsc{both} be paid to the IB within \textbf{1 month of the receipt of the request for SISR} by the IB.
+        The amount of the fees is \textbf{(i)} 200 \textsc{CHF} and \textbf{(ii)} 1458 \textsc{CHF} [found in \textsc{Annex SISA} of the \texttt{SG} office.]
+        \item The supplementary international search will start ``\textit{promptly after receipt of the documents.}'' The SISA may also wait until receipt of the ISR and WO--ISR, and even up to 22 months after the priority date [\textbf{Rule 45\textit{bis}.5}].
+        \item The supplementary international search report is to be established within \textit{28 months of the priority date}. [\textbf{R. 45\textit{bis}.7}]. \underline{\textsc{No written opinion is established}} with the supplementary international search report, but additional comments on the prior art found in the ISR may be included. [see also \textsc{AG--IP 8.049}].
+        \item The supplementary international search report does not repeat relevant prior art documents which have already been cited in the international search report, unless this is necessary because of new relevance when read in conjunction with other documents discovered during the supplementary international search. On occasion, the supplementary international search report may contain more detailed explanations concerning citations of documents than those in the main international search report.
+        \item The supplementary international search report is not published \textit{per se} nor as part of the international publication. Nevertheless, once the international application has been published, and the supplementary international search report has been received, it is \textit{made available for public inspection} by the International Bureau on \textsc{PATENTSCOPE}. 
     \end{enumerate}
 
     \item % Question 5
     L3-27 \\
     A US applicant wants to request a demand for international preliminary examination at the USPTO for an international application filed on 29 December 2016 without any claiming priority. The ISR and WO-ISA, established by the USPTO as ISA, were transmitted to the applicant on 26 June 2018. \\
     However, due to a severe hurricane, the USPTO was closed on 29 and 30 October 2018, and the applicant was not able to submit the demand on 29 October 2018. \\
-    Can the demand still be validly filed if today is 31 October 2018?
+The demand may still be validly filed on the next working day of 31 October 2018. This falls under \textit{natural calamity} mentioned under [\textbf{R. 82\textit{quater}}] pertaining to \textit{force majeure} events. \newline Only \underline{priority} and \underline{entering national phase} cannot be excused due to \textit{force majeure}. So filing a demand for IPEA will be accepted. 
 
     \item % Question 6
     In which cases can the EPO act as IPEA? \\
