--- a/main.tex
+++ b/main.tex
@@ -663,6 +663,86 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
         \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
     \end{enumerate}
 
+    \section{October 20, 2025}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    L4-06 (Basic selection) \\
+    A US applicant, resident in the US, files his international application at the USPTO. Subsequently he wishes to pursue his application before the EPO as designated office.
+    \begin{enumerate}[label=(\alph*)]
+        \item Can the US applicant initiate the national entry procedure himself?
+        \item What happens if a representative is not appointed once the processing has started by the EPO?
+        \item What are the minimum acts to enter the regional phase before the EPO if surcharges are to be avoided?
+    \end{enumerate}
+
+    \item % Question 2
+    L4-12 - T/F question (Basic selection) \\
+    An international application was published in Korean together with the international search report established by the Korean patent office as ISA. The international application does not claim priority. The applicant wants to enter the European regional phase today, the last day of the 31-month period without any penalty fees. \\
+    Which fees need to be paid within what time limit to avoid any penalty fees?
+
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \vspace{0.5em}
+    The examination fee….
+    \begin{enumerate}[label=(\alph*)]
+        \item ... needs to be paid upon entry today.
+        \item ... may be paid, without any additional fee, until 6 months from the publication of the translation of the international application under Art.153(4) EPC, first sentence, as the publication of the translation comprises the translation of the international search report.
+        \item ... may be paid, without any additional fee, until 6 months from the mention of the supplementary European search report in the European patent Bulletin.
+        \item ... will be refunded if the applicant already paid the examination fee on entry and withdraws the application shortly after receipt of the supplementary European search report.
+    \end{enumerate}
+
+    \item % Question 3
+    L4-22 \\
+    How many claims fees must the applicant pay or does he get refunded, and when, in the following cases:
+    
+    \vspace{1em}
+    \textbf{Case 1:} A Euro-PCT application X contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31 month period. No amendments are filed after expiry of the 31-month period and before expiry of the six-month period under Rule 161.
+    
+    \vspace{1em}
+    \textbf{Case 2:} A Euro-PCT application Y contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31-month period. After expiry of the 31-month period and before expiry of the six-month period under Rule 161, the applicant files an amended set of 32 claims.
+
+    \item % Question 4
+    L4-23 (Basic selection) \\
+    An international application is filed on 7 September 2015 without claiming priority. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
+    What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
+    \begin{enumerate}[label=(\alph*)]
+        \item ... without additional fee?
+        \item ... with additional fee?
+    \end{enumerate}
+
+    \vspace{1em}
+    L4-24 \\
+    An international application is filed on 9 June 2016 claiming priority of a national application filed on 7 September 2015. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
+    What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
+    \begin{enumerate}[label=(\alph*), resume]
+        \item … without additional fee?
+        \item … with additional fee?
+    \end{enumerate}
+
+    \item % Question 5
+    L4-30 (Basic selection) \\
+    A Swedish applicant has filed an international application indicating the Swedish Patent and Registration Office as International Searching Authority. The application is filed in English. During the international search, the ISA is of the opinion that the international application contains 3 inventions, A, B and C, and that with respect to the second and third invention an additional fee has to be paid for each of them if the International Search Report is to cover these inventions. An additional fee is only paid for the second invention B. No demand was filed. The applicant wants to enter the regional phase before the EPO in May 2023, and let the EPO conduct searches on all three inventions A, B and C in the regional phase before deciding with which invention to continue into examination.
+    
+    \vspace{1em}
+    Which amount of search fee(s) and/or further search fees must the applicant pay at or shortly after entry into the regional phase before the EPO (assuming the EPO shares the non-unity opinion)?
+
+    \item % Question 6
+    L4-41 (Basic selection) \\
+    Today, 25 February 2019, your Japanese client asks you to enter the regional phase before the EPO for a PCT-application filed in Japanese with the Japanese Patent Office on 26 July 2017, validly claiming priority from a Japanese patent application P-JP dated 1 August 2016. The International Preliminary Examination was carried out by the Japanese Patent Office. Due to an overload of work in the translation department of your client, you are informed that you will receive the English translation of the PCT-application on 23 April 2019.
+    
+    \vspace{1em}
+    How would you proceed in order to enter the regional phase, keeping costs for your client to a minimum?
+
+    \item % Question 7
+    L4-42 (Advanced selection) \\
+    An applicant wanted to enter the EP phase with his international application and duly filed a translation into English, and paid the filing fee and search fee. Shortly after the 31m time limit, the applicant received a loss-of-rights communication, indicating that the application was deemed to be withdrawn due to non-payment of the designation and examination fee and not filing the request for examination. One week after having received the communication, the applicant got into the hospital and despite all due care, he missed the time limit to request further processing with respect to the missed periods. 
+    
+    \vspace{1em}
+    How many re-establishment fees does the applicant need to pay? 
+
+\end{enumerate}
 \end{enumerate}
 
 
@@ -938,7 +1018,89 @@ The EPO acts as International Preliminary Examination Authority under the condit
         \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings --- \textbf{False}
     \end{enumerate}
 
+
+    \section{October 20, 2025}
+
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+    L4-06 (Basic selection) \\
+    A US applicant, resident in the US, files his international application at the USPTO. Subsequently he wishes to pursue his application before the EPO as designated office.
+    \begin{enumerate}[label=(\alph*)]
+        \item Can the US applicant initiate the national entry procedure himself?
+        \item What happens if a representative is not appointed once the processing has started by the EPO?
+        \item What are the minimum acts to enter the regional phase before the EPO if surcharges are to be avoided?
+    \end{enumerate}
+
+    \item % Question 2
+    L4-12 - T/F question (Basic selection) \\
+    An international application was published in Korean together with the international search report established by the Korean patent office as ISA. The international application does not claim priority. The applicant wants to enter the European regional phase today, the last day of the 31-month period without any penalty fees. \\
+    Which fees need to be paid within what time limit to avoid any penalty fees?
+
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \vspace{0.5em}
+    The examination fee….
+    \begin{enumerate}[label=(\alph*)]
+        \item ... needs to be paid upon entry today.
+        \item ... may be paid, without any additional fee, until 6 months from the publication of the translation of the international application under Art.153(4) EPC, first sentence, as the publication of the translation comprises the translation of the international search report.
+        \item ... may be paid, without any additional fee, until 6 months from the mention of the supplementary European search report in the European patent Bulletin.
+        \item ... will be refunded if the applicant already paid the examination fee on entry and withdraws the application shortly after receipt of the supplementary European search report.
+    \end{enumerate}
+
+    \item % Question 3
+    L4-22 \\
+    How many claims fees must the applicant pay or does he get refunded, and when, in the following cases:
+    
+    \vspace{1em}
+    \textbf{Case 1:} A Euro-PCT application X contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31 month period. No amendments are filed after expiry of the 31-month period and before expiry of the six-month period under Rule 161.
+    
+    \vspace{1em}
+    \textbf{Case 2:} A Euro-PCT application Y contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31-month period. After expiry of the 31-month period and before expiry of the six-month period under Rule 161, the applicant files an amended set of 32 claims.
+
+    \item % Question 4
+    L4-23 (Basic selection) \\
+    An international application is filed on 7 September 2015 without claiming priority. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
+    What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
+    \begin{enumerate}[label=(\alph*)]
+        \item ... without additional fee?
+        \item ... with additional fee?
+    \end{enumerate}
+
+    \vspace{1em}
+    L4-24 \\
+    An international application is filed on 9 June 2016 claiming priority of a national application filed on 7 September 2015. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
+    What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
+    \begin{enumerate}[label=(\alph*), resume]
+        \item … without additional fee?
+        \item … with additional fee?
+    \end{enumerate}
+
+    \item % Question 5
+    L4-30 (Basic selection) \\
+    A Swedish applicant has filed an international application indicating the Swedish Patent and Registration Office as International Searching Authority. The application is filed in English. During the international search, the ISA is of the opinion that the international application contains 3 inventions, A, B and C, and that with respect to the second and third invention an additional fee has to be paid for each of them if the International Search Report is to cover these inventions. An additional fee is only paid for the second invention B. No demand was filed. The applicant wants to enter the regional phase before the EPO in May 2023, and let the EPO conduct searches on all three inventions A, B and C in the regional phase before deciding with which invention to continue into examination.
+    
+    \vspace{1em}
+    Which amount of search fee(s) and/or further search fees must the applicant pay at or shortly after entry into the regional phase before the EPO (assuming the EPO shares the non-unity opinion)?
+
+    \item % Question 6
+    L4-41 (Basic selection) \\
+    Today, 25 February 2019, your Japanese client asks you to enter the regional phase before the EPO for a PCT-application filed in Japanese with the Japanese Patent Office on 26 July 2017, validly claiming priority from a Japanese patent application P-JP dated 1 August 2016. The International Preliminary Examination was carried out by the Japanese Patent Office. Due to an overload of work in the translation department of your client, you are informed that you will receive the English translation of the PCT-application on 23 April 2019.
+    
+    \vspace{1em}
+    How would you proceed in order to enter the regional phase, keeping costs for your client to a minimum?
+
+    \item % Question 7
+    L4-42 (Advanced selection) \\
+    An applicant wanted to enter the EP phase with his international application and duly filed a translation into English, and paid the filing fee and search fee. Shortly after the 31m time limit, the applicant received a loss-of-rights communication, indicating that the application was deemed to be withdrawn due to non-payment of the designation and examination fee and not filing the request for examination. One week after having received the communication, the applicant got into the hospital and despite all due care, he missed the time limit to request further processing with respect to the missed periods. 
+    
+    \vspace{1em}
+    How many re-establishment fees does the applicant need to pay? 
+
 \end{enumerate}
+\end{enumerate}
+
 
 
 \end{document}
