HW WK4 beginning Euro-PCT

--- a/main.tex
+++ b/main.tex
@@ -1027,9 +1027,34 @@ The EPO acts as International Preliminary Examination Authority under the condit
     L4-06 (Basic selection) \\
     A US applicant, resident in the US, files his international application at the USPTO. Subsequently he wishes to pursue his application before the EPO as designated office.
     \begin{enumerate}[label=(\alph*)]
-        \item Can the US applicant initiate the national entry procedure himself?
-        \item What happens if a representative is not appointed once the processing has started by the EPO?
-        \item What are the minimum acts to enter the regional phase before the EPO if surcharges are to be avoided?
+        \item The US applicant can initiate the national entry procedure himself; but cannot do any subsequent steps himself [\textbf{Art. 27(7) PCT}; \textbf{R. 51\textit{bis} PCT}; \textbf{Art. 133 EPC}]. ``\texttt{However, up to expiry of the 31-month time limit under Rule 159
+EPC, non-resident applicants may either comply with any
+requirement themselves or act through a professional
+representative entitled to practise before the EPO. This means
+that, within the 31-month time limit, non-resident applicants may
+themselves sign and file EPO Form 1200, submit amendments, file
+a translation of the application, file a request for early processing,
+etc.}' -- \textsc{Euro-PCT Guide 5.3.008}'
+        \item ''\texttt{Where applicants have failed to appoint a professional
+representative as required, they will be invited by the EPO to do so
+within a time limit of two months. Until the EPO is informed of a
+(valid) appointment, any procedural step taken by such applicants
+will be deemed not to have been taken. If the deficiency is not
+corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guide 5.3.015}; \textbf{R. 163(5), (6) EPC}.
+        \item  The minimum acts [\textbf{R. 159 EPC}] to enter the regional phase before the EPO \textit{for surcharges to be avoided}: 
+        \begin{enumerate}[label=(\roman*)]
+         \item no translation needed in this case as it's in English from the USPTO;
+\item pay filing fee;
+\item pay the designation fee (and any extension/validation fees, if applicable);
+\item pay the search fee (EPO needs to do a search);
+\item file request for examination if period under \textbf{R. 70(1) EPC} has already expired;
+\item pay the renewal fee for the third year;
+\item (not always applicable) [\textbf{DOO--DOO}] file sequence listing if not available to EPO;
+\item (not always applicable) file the certificate of exhibition. 
+
+
+        \end{enumerate}
+
     \end{enumerate}
 
     \item % Question 2
