HW WK 4 first half

--- a/main.tex
+++ b/main.tex
@@ -1066,12 +1066,15 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \vspace{0.5em}
-    The examination fee….
+    The \textbf{examination fee}….
     \begin{enumerate}[label=(\alph*)]
-        \item ... needs to be paid upon entry today.
-        \item ... may be paid, without any additional fee, until 6 months from the publication of the translation of the international application under Art.153(4) EPC, first sentence, as the publication of the translation comprises the translation of the international search report.
-        \item ... may be paid, without any additional fee, until 6 months from the mention of the supplementary European search report in the European patent Bulletin.
-        \item ... will be refunded if the applicant already paid the examination fee on entry and withdraws the application shortly after receipt of the supplementary European search report.
+        \item ... needs to be paid upon entry today. --- \textbf{True}. No priority claimed. ISA was published about 12 months ago, so period of [\textbf{R. 70(1)}], i.e., 6 months, has long expired.
+        \item ... may be paid, without any additional fee, until 6 months from the publication of the translation of the international application under Art.153(4) EPC, first sentence, as the publication of the translation comprises the translation of the international search report. --- \textbf{False}.
+        \item ... may be paid, without any additional fee, until 6 months from the mention of the supplementary European search report in the European patent Bulletin. --- \textbf{False}.
+        \item ... will be refunded if the applicant already paid the examination fee on entry and withdraws the application shortly after receipt of the supplementary European search report. --- \textbf{True}. \newline
+        
+       \adforn{61} [\textbf{R. 159(1) EPC}] -- necessary acts for entry into Euro phase. \newline
+       \adforn{61} [\textbf{Rfees 11}] -- refund of examination fee (full or partial).
     \end{enumerate}
 
     \item % Question 3
@@ -1079,20 +1082,29 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     How many claims fees must the applicant pay or does he get refunded, and when, in the following cases:
     
     \vspace{1em}
-    \textbf{Case 1:} A Euro-PCT application X contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31 month period. No amendments are filed after expiry of the 31-month period and before expiry of the six-month period under Rule 161.
+    \textbf{Case 1:} He must pay a further 7 claims fees. In this case, he ignored it, so the claims 21--27 are deemed abandoned. 
     
     \vspace{1em}
-    \textbf{Case 2:} A Euro-PCT application Y contains 27 claims on expiry of the 31-month period. The applicant pays five claims fees within the 31-month period. After expiry of the 31-month period and before expiry of the six-month period under Rule 161, the applicant files an amended set of 32 claims.
+    \textbf{Case 2:} Calculated on the basis of the amended set. So now he owes 17--5=12 claims fees, otherwise those claims will be deemed to have been abandoned. 
 
     \item % Question 4
     L4-23 (Basic selection) \\
     An international application is filed on 7 September 2015 without claiming priority. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
     What is the last day on which the renewal fee in respect of the third year can be paid to the EPO…
     \begin{enumerate}[label=(\alph*)]
-        \item ... without additional fee?
-        \item ... with additional fee?
+        \item ... without additional fee? --- { \textsc{9 APR 2018}}
+        \item ... with additional fee? --- { \textsc{9 OCT 2018}}
     \end{enumerate}
 
+    \textsc{9 APR 2018} is the 31-month deadline. 
+    \textsc{30 SEP 2017} is the renewal date. (\textit{\textbf{de ultimo ad ultimo}}), where it just goes to the end of the month regardless.
+    
+    The first is the \underline{later} one. 
+    
+    Then for 6-month extension we \textbf{DO NOT} have \textit{de ultimo ad ultimo}. So it goes to \textsc{9 OCT 2018}.
+    
+    
+    
     \vspace{1em}
     L4-24 \\
     An international application is filed on 9 June 2016 claiming priority of a national application filed on 7 September 2015. The applicant wants to enter the regional phase before the EPO as designated Office. Today is 26 February 2018. \\
